# aegis

./: .gitignore  CMakeLists.txt  README  README.md
src/act/: CMakeLists.txt
src/act/actp/: actp_condition.cpp  actp_condition.h  actp_condition.t.cpp  actp_conditionresult.cpp  actp_conditionresult.h  actp_mutex.cpp  actp_mutex.h  actp_mutex.t.cpp  actp_mutexresult.cpp  actp_mutexresult.h  actp_posixcondition.cpp  actp_posixcondition.h  actp_posixmutex.cpp  actp_posixmutex.h  actp_posixthread.cpp  actp_posixthread.h  actp_scopedlock.h  actp_scopedlock.t.cpp  actp_semaphore.cpp  actp_semaphore.h  actp_semaphore.t.cpp  actp_thread.cpp  actp_thread.h  actp_thread.t.cpp  actp_threadattributes.cpp  actp_threadattributes.h  actp_threadutil.cpp  actp_threadutil.h  actp_win32condition.cpp  actp_win32condition.h  actp_win32mutex.cpp  actp_win32mutex.h  actp_win32thread.cpp  actp_win32thread.h
src/act/acts/: acts_platform.cpp  acts_platform.h
src/aft/: CMakeLists.txt  aft.t.cpp
src/aft/aftc/: aftc_circular_buffer.t.cpp  aftc_circularbuffer.cpp  aftc_circularbuffer.h  aftc_circularbufferiterator.h  aftc_construct.cpp  aftc_construct.h  aftc_packedstringmap.cpp  aftc_packedstringmap.h  aftc_packedstringmap.t.cpp  aftc_trie.cpp  aftc_trie.h  aftc_trie.t.cpp  aftc_uninitialized.h
src/aft/aftfs/: aftfs_directoryentry.cpp  aftfs_directoryentry.h  aftfs_file.cpp  aftfs_file.h  aftfs_filesystem.cpp  aftfs_filesystem.h  aftfs_filesystem.t.cpp  aftfs_localfilesystem.cpp  aftfs_localfilesystem.h  aftfs_localfilesystem.t.cpp  aftfs_path.cpp  aftfs_path.h  aftfs_path.t.cpp  aftfs_posixpath.cpp  aftfs_posixpath.h  aftfs_readonlyfilehandle.h
src/aft/afth/: afth_crc32.cpp  afth_crc32.h  afth_crc32.t.cpp  afth_uuid.cpp  afth_uuid.h  afth_uuid.t.cpp
src/aft/aftio/: aftio_flags.cpp  aftio_flags.h  aftio_inputstream.cpp  aftio_inputstream.h  aftio_outputstream.cpp  aftio_outputstream.h  aftio_permission.cpp  aftio_permission.h  aftio_permission.t.cpp  aftio_permissions.cpp  aftio_permissions.h  aftio_reader.cpp  aftio_reader.h  aftio_writer.cpp  aftio_writer.h
src/aft/aftipc/: aftcipc_ipckey.cpp  aftcipc_ipckey.h  aftipc_ipckey.cpp  aftipc_mappable.cpp  aftipc_mappable.h  aftipc_mappedregion.cpp  aftipc_mappedregion.h  aftipc_memorymappedfile.cpp  aftipc_memorymappedfile.h  aftipc_memorymappedfile.t.cpp  aftipc_resultcode.cpp  aftipc_resultcode.h  aftipc_sharedmemory.cpp  aftipc_sharedmemory.h  aftipc_sharedmemory.t.cpp
src/aft/aftl/: aftl_logger.cpp  aftl_logger.h  aftl_loglevel.cpp  aftl_loglevel.h  aftl_logobserver.cpp  aftl_logobserver.h  aftl_stdoutobserver.cpp  aftl_stdoutobserver.h
src/aft/aftm/: aftm_round.cpp  aftm_round.h
src/aft/aftma/: aftma_allocator.cpp  aftma_allocator.h  aftma_blockallocator.cpp  aftma_blockallocator.h
src/aft/afts/: afts_alignmentof.cpp  afts_alignmentof.h  afts_assert.cpp  afts_assert.h  afts_byteorder.cpp  afts_byteorder.h  afts_comparisonutil.cpp  afts_comparisonutil.h  afts_comparisonutil.t.cpp  afts_compiler.cpp  afts_compiler.h  afts_errorutil.cpp  afts_errorutil.h  afts_os.cpp  afts_os.h  afts_platform.cpp  afts_platform.h  afts_stdint.h  afts_win32errorutil.cpp  afts_win32errorutil.h  afts_windows.cpp  afts_windows.h
src/aft/aftt/: aftt_date.cpp  aftt_date.h  aftt_date.t.cpp  aftt_dateinterval.cpp  aftt_dateinterval.h  aftt_datetime.cpp  aftt_datetime.h  aftt_datetime.t.cpp  aftt_datetimeinterval.cpp  aftt_datetimeinterval.h  aftt_datetimeinterval.t.cpp  aftt_datetimetz.cpp  aftt_datetimetz.h  aftt_day.cpp  aftt_day.h  aftt_dayofweek.cpp  aftt_dayofweek.h  aftt_days.cpp  aftt_days.h  aftt_hours.cpp  aftt_hours.h  aftt_microseconds.cpp  aftt_microseconds.h  aftt_milliseconds.cpp  aftt_milliseconds.h  aftt_minutes.cpp  aftt_minutes.h  aftt_month.cpp  aftt_month.h  aftt_nanoseconds.cpp  aftt_nanoseconds.h  aftt_seconds.cpp  aftt_seconds.h  aftt_systemtime.cpp  aftt_systemtime.h  aftt_time.cpp  aftt_time.h  aftt_time.t.cpp  aftt_timezone.cpp  aftt_timezone.h  (+10 more)
src/aft/aftthr/: aftthr_condition.cpp  aftthr_condition.h  aftthr_condition.t.cpp  aftthr_mutex.cpp  aftthr_mutex.h  aftthr_mutex.t.cpp  aftthr_platform.cpp  aftthr_platform.h  aftthr_scopedlock.h  aftthr_semaphore.cpp  aftthr_semaphore.h  aftthr_semaphore.t.cpp  aftthr_thread.cpp  aftthr_thread.h  aftthr_thread.t.cpp  aftthr_threadattributes.cpp  aftthr_threadattributes.h  aftthr_threadutil.cpp  aftthr_threadutil.h
src/aft/aftu/: aftu_exception.cpp  aftu_exception.h  aftu_hexprinter.cpp  aftu_hexprinter.h  aftu_hexprinter.t.cpp  aftu_hexutil.cpp  aftu_hexutil.h  aftu_nullable.h  aftu_nullable.t.cpp  aftu_stringref.cpp  aftu_stringref.h  aftu_stringref.t.cpp  aftu_stringutil.cpp  aftu_stringutil.h  aftu_stringutil.t.cpp  aftu_typedbuffer.h  aftu_typedexception.h  aftu_url.cpp  aftu_url.h  aftu_url.t.cpp  aftu_win32error.cpp  aftu_win32error.h
src/agt/: CMakeLists.txt  agt.t.cpp
src/agt/agta/: agta_assetpool.cpp  agta_assetpool.h  agta_assetpool.t.cpp  agta_component.cpp  agta_component.h  agta_componententitymap.cpp  agta_componententitymap.h  agta_componentmanager.cpp  agta_componentmanager.h  agta_componentpool.cpp  agta_componentpool.h  agta_displaytimer.cpp  agta_displaytimer.h  agta_engine.cpp  agta_engine.h  agta_entity.cpp  agta_entity.h  agta_eventsystem.cpp  agta_eventsystem.h  agta_glwindow.cpp  agta_glwindow.h  agta_material.cpp  agta_material.h  agta_mesh.cpp  agta_mesh.h  (+20 more)
src/aunit/: CMakeLists.txt  aunit.h  aunit_assert.cpp  aunit_assert.h  aunit_commandlineoptions.cpp  aunit_commandlineoptions.h  aunit_commandlineparser.cpp  aunit_commandlineparser.h  aunit_consolereporter.cpp  aunit_consolereporter.h  aunit_describe.cpp  aunit_describe.h  aunit_expect.cpp  aunit_expect.h  aunit_fixture.cpp  aunit_fixture.h  aunit_fixtureregistry.cpp  aunit_fixtureregistry.h  aunit_reporter.cpp  aunit_reporter.h  aunit_stringutil.cpp  aunit_stringutil.h  aunit_testconfiguration.cpp  aunit_testconfiguration.h  aunit_testfixture.cpp  aunit_testfixture.h  aunit_testmanager.cpp  aunit_testmanager.h  aunit_testregistry.cpp  aunit_testregistry.h  aunit_testresult.cpp  aunit_testresult.h
(+193 files in other folders)
